--- a/README.adoc
+++ b/README.adoc
@@ -5,14 +5,16 @@ desktop-tools
 'desktop-tools' is a collection of tools to run my desktop that might be useful
 to other people as well:
 
- - 'wmstatus' does literally everything my dwm doesn't but I'd like it to. It
+ - 'wmstatus' does literally everything my i3 doesn't but I'd like it to. It
    includes PulseAudio volume management and hand-written NUT and MPD clients,
-   all in the name of liberation from GPL-licensed software of course.
- - 'brightness' allows me to change the brightness of w/e display device I have.
- - 'input-switch' likewise switches the input source of external displays.
+   all in the name of liberation from GPL-licensed software of course
+ - 'brightness' allows me to change the brightness of w/e display device I have
+ - 'input-switch' likewise switches the input source of external displays
  - 'fancontrol-ng' is a clone of fancontrol that can handle errors on resume
    from suspend instead of setting fans to maximum speed and quitting;
    in general it doesn't handle everything the original does
+ - 'priod' sets CPU, I/O and OOM killer priorities for new processes according
+   to configuration
  - 'shellify' is a simple script that sets up a shell for commands like vgdb
    and nmcli that are painfully lacking it
  - 'gdm-switch-user' tells the running GDM daemon, if any, to show the switch
