paswitch: avoid information duplication
And miscellaneous cleanup.

--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,8 @@ to other people as well:
  - 'wmstatus' does literally everything my i3 doesn't but I'd like it to. It
    includes PulseAudio volume management and hand-written NUT and MPD clients,
    all in the name of liberation from GPL-licensed software of course
+ - 'paswitch' displays a list of all PulseAudio sinks and ports and allows
+   switching between them, moving all playing inputs
  - 'brightness' allows me to change the brightness of w/e display device I have
  - 'input-switch' likewise switches the input source of external displays
  - 'fancontrol-ng' is a clone of fancontrol that can handle errors on resume
